--- a/src/main/webapp/local/index.css
+++ b/src/main/webapp/local/index.css
@@ -69,7 +69,7 @@ li {
     overflow: hidden;
 }
 .header-container {
-    background: url(../img/header.png) no-repeat 50% top;
+    background: url(../img/logo.png) no-repeat 50% top;
     height: 220px;
     width: 100%;
     margin: 0 auto;
