--- a/src/main/webapp/local/index.css
+++ b/src/main/webapp/local/index.css
@@ -5,7 +5,8 @@
 }
 body {
     margin: 0;
-    background: url(../img/body-bg.png) repeat-x 0 0;
+    background: url(../img/body-bg.png) repeat-x;
+    background-color: #F5F4EC;
 }
 a {
     text-decoration: none;
