--- a/src/main/webapp/local/index.css
+++ b/src/main/webapp/local/index.css
@@ -90,7 +90,7 @@ li {
     float: left;
     height: 24px;
     line-height: 24px;
-    background: #568BE5;
+    background: #154EB5;
     width: 180px;
     border: 0px;
     color: #EEA15B;
