--- a/src/main/webapp/local/index.css
+++ b/src/main/webapp/local/index.css
@@ -18,7 +18,7 @@ li {
     list-style: none;
 }
 
-/** Í·²¿header **/
+/** Í·ï¿½ï¿½header **/
 .t_title {
     background: #f4f4f4;
     width: 100%;
@@ -105,7 +105,7 @@ li {
     cursor: pointer;
 }
 
-/** µ¼º½À¸ **/
+/** ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ **/
 .nav-container {
     width: 100%;
     background-color: #af1e25;
@@ -130,7 +130,7 @@ li {
     text-align: center;
 }
 
-/** Í¨Öª¹«¸æ **/
+/** Í¨Öªï¿½ï¿½ï¿½ï¿½ **/
 .tzgg {
     width: 940px;
     height: 30px;
@@ -158,7 +158,7 @@ li {
     padding-left: 10px;
     color: #3f3f3f;
 }
-/** ÖÐ¼äÄÚÈÝºÍµ×²¿ **/
+/** ï¿½Ð¼ï¿½ï¿½ï¿½ï¿½ÝºÍµ×²ï¿½ **/
 .footer-container {
     width: 100%;
     margin-bottom: 20px;
@@ -246,7 +246,7 @@ li {
 }
 .xinfang-box .jb-box {
     margin: 0;
-    margin-top: 5px;
+    margin-top: 15px;
     width: 425px;
     height: 195px;
     cursor: pointer;
@@ -406,7 +406,7 @@ li {
 .banner-four-leftnav .currentH {
     color: #9e0e18;
 }
-/** ÍøÕ¾Á´½Ó  **/
+/** ï¿½ï¿½Õ¾ï¿½ï¿½ï¿½ï¿½  **/
 .banner-link {
 	width: 940px;
     margin: auto;
@@ -456,7 +456,7 @@ li {
 .lianjie-img img {
     margin-right: 10px;
 }
-/** µ×²¿ **/
+/** ï¿½×²ï¿½ **/
 .yewei {
     width: 100%;
     height: 124px;
